--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,5 @@
 hoursToInterest: 3
+topBalAmount: 10
 interest:
   default: 0.10
 chat:
@@ -10,6 +11,7 @@ chat:
   depositMsg: "Deposited &a$<value>&7 into bank account"
   withdrawMsg: "Withdrew &a$<value>&7 from bank account"
   interestMsg: "&7You gained &a$<interest>&7 as bank interest"
+  topBalFormat: "&6<place>) &7&o<player> - &a$<bal>"
   badValue: "Can only deposit number values"
   noFunds: "Insufficient funds"
   noAccess: "You do not have bank access"
@@ -18,6 +20,7 @@ chat:
   - " "
   - "&e/bank (deposit, d) <amount>&7 - Put money into bank"
   - "&e/bank (withdraw, w) <amount>&7 - Take money from bank"
+  - " "
 gui:
   balance:
     name: "&6Bank Balance"
